# qedmma-lite

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  benchmark.py  mkdocs.yml  pyproject.toml  pytest.ini  run_demo.py  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benchmark/: RESULTS.txt  benchmark_suite.py  imm_ekf_benchmark.py
benchmarks/: benchmark_suite.py  fer_benchmark.py  fer_benchmark_v2.py  fer_benchmark_viz.py  qedmma_advantage_benchmark.py  tuned_benchmark.py  verified_benchmark.py
datasets/generator/: dataset_generator.py
docs/: COMPARISON.md  NX_MIMOSA_IMPROVEMENT_PLAN.md  fast_init_patch.py  index.md
docs/algorithms/: ckf.md  ukf.md  zero-dsp.md
docs/benchmarks/: filter-comparison.md
docs/blog/: why_qedmma_beats_everything.md
docs/marketing/: social_media_posts.md  youtube_tutorial_script.md
fpga/: Makefile
fpga/hls/: run_hls.tcl  zero_dsp_correlator.cpp  zero_dsp_correlator_tb.cpp
fpga/rtl/: zero_dsp_correlator.vhd  zero_dsp_correlator_tb.vhd
fpga/vivado/: synthesize_zero_dsp.tcl
fpga/zero_dsp/: README.md
fpga/zero_dsp/constraints/: zero_dsp_synth.xdc
fpga/zero_dsp/docs/: ZERO_DSP_SPEC.md
fpga/zero_dsp/rtl/: zero_dsp_correlator.sv
fpga/zero_dsp/scripts/: synth_zero_dsp.tcl
fpga/zero_dsp/tb/: Makefile  test_zero_dsp_correlator.py
python/: setup.py
python/nx_mimosa/: core_v3.py
python/qedmma/advanced/: __init__.py  adaptive_noise.py  ckf.py  ukf.py  zero_dsp_correlation.py
python/qedmma_lite/: __init__.py  adaptive_noise.py  advanced_filters.py  core.py  tracker.py  tracker_v2.py  zero_dsp.py
python/tests/: __init__.py  test_adaptive_noise.py  test_zero_dsp.py
qedmma/: __init__.py  models.py  smoother.py  trackers.py
tests/: test_advanced_filters.py  test_tracker.py
