# =============================================================================
# QEDMMA-Lite - Python Package Configuration
# =============================================================================
# Author:  Dr. Mladen Mešter / Nexellum d.o.o.
# License: AGPL-3.0-or-later
# =============================================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qedmma-lite"
version = "1.0.0"
description = "Open source radar target tracking with IMM/UKF/CKF filters and Zero-DSP FPGA correlation"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "Dr. Mladen Mešter", email = "mladen@nexellum.com"}
]
maintainers = [
    {name = "Nexellum d.o.o.", email = "mladen@nexellum.com"}
]
keywords = [
    "radar",
    "tracking",
    "kalman-filter",
    "imm",
    "ukf",
    "ckf",
    "sensor-fusion",
    "fpga",
    "signal-processing",
    "aerospace",
    "defense",
    "adaptive-filter",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]
fpga = [
    "cocotb>=1.8.0",
]
viz = [
    "matplotlib>=3.5.0",
]
all = [
    "qedmma-lite[dev,docs,fpga,viz]",
]

[project.urls]
Homepage = "https://github.com/mladen1312/qedmma-lite"
Documentation = "https://github.com/mladen1312/qedmma-lite#readme"
Repository = "https://github.com/mladen1312/qedmma-lite.git"
Issues = "https://github.com/mladen1312/qedmma-lite/issues"
Changelog = "https://github.com/mladen1312/qedmma-lite/blob/main/CHANGELOG.md"
Commercial = "https://www.nexellum.com"

[project.scripts]
qedmma-demo = "qedmma_lite.cli:demo_cli"

# =============================================================================
# Setuptools Configuration
# =============================================================================

[tool.setuptools]
package-dir = {"" = "python"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["python"]
include = ["qedmma_lite*"]
exclude = ["tests*", "benchmark*"]

[tool.setuptools.package-data]
qedmma_lite = ["py.typed", "*.pyi"]

# =============================================================================
# Ruff Configuration (Linting & Formatting)
# =============================================================================

[tool.ruff]
target-version = "py39"
line-length = 100
include = ["*.py", "*.pyi"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["qedmma_lite"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# Black Configuration
# =============================================================================

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

# =============================================================================
# MyPy Configuration
# =============================================================================

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy.*", "scipy.*"]
ignore_missing_imports = true

# =============================================================================
# Pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "-q", "--strict-markers"]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "rtl: marks tests requiring RTL simulation",
    "hardware: marks tests requiring hardware",
]

# =============================================================================
# Coverage Configuration
# =============================================================================

[tool.coverage.run]
source = ["qedmma_lite"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 50
show_missing = true
