[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qedmma-lite"
version = "3.1.0"
description = "QEDMMA: Quantum-Enhanced Dynamically-Managed Multi-Model Algorithm for radar tracking"
readme = "README.md"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Dr. Mladen Mešter", email = "mladen@nexellum.com"}
]
maintainers = [
    {name = "Nexellum d.o.o.", email = "mladen@nexellum.com"}
]
keywords = [
    "radar", "tracking", "kalman", "imm", "maneuvering-target",
    "rts-smoother", "defense", "aerospace"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "scipy>=1.9.0",
    "matplotlib>=3.5.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/nexellum/qedmma-lite"
Documentation = "https://qedmma.nexellum.com"
Repository = "https://github.com/nexellum/qedmma-lite"
Issues = "https://github.com/nexellum/qedmma-lite/issues"

[tool.setuptools.packages.find]
include = ["qedmma*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
